--- a/proposal/sources.bib
+++ b/proposal/sources.bib
@@ -59,4 +59,34 @@ year = "2009"
     pages={993--1022},
     year={2003}
 }
+@article{bro1997,
+  title={PARAFAC. Tutorial and applications},
+  author={Bro, Rasmus},
+  journal={Chemometrics and intelligent laboratory systems},
+  volume={38},
+  number={2},
+  pages={149--171},
+  year={1997},
+  publisher={Elsevier}
+}
+@article{haastad1990,
+  title={Tensor rank is NP-complete},
+  author={H{\aa}stad, Johan},
+  journal={Journal of Algorithms},
+  volume={11},
+  number={4},
+  pages={644--654},
+  year={1990},
+  publisher={Elsevier}
+}
+@article{andersson2000,
+  title={The N-way toolbox for MATLAB},
+  author={Andersson, Claus A and Bro, Rasmus},
+  journal={Chemometrics and intelligent laboratory systems},
+  volume={52},
+  number={1},
+  pages={1--4},
+  year={2000},
+  publisher={Elsevier}
+}
 
