--- a/proposal/sources.bib
+++ b/proposal/sources.bib
@@ -4,6 +4,18 @@ Title="Proslogion",
 Publisher="Ordo Sancti Benedicti",
 Year="c. 1078",
 }
+@book{aesop,
+Author="Aesop of Delphi",
+Title="Aesop's Fables",
+Year="c. 620BCE",
+Note="Translated by J.H. Stickney 1915 "
+}
+@book{grimm,
+Author="Jacob and Wilhelm Grimm",
+Title="Grimm's Fairy Tales",
+Year="1812",
+Note="Translated by Francis Jenkins Olcott 1927"
+}
 @article{adler2009,
 author = "Adler, Robert and Ewing, John and Taylor, Peter",
 doi = "10.1214/09-STS285",
@@ -89,4 +101,9 @@ year = "2009"
   year={2000},
   publisher={Elsevier}
 }
-
+@misc{dada,
+    title = {DadaDodo (software)},
+    author = {Zamwinski, Jamie},
+    howpublished = {https://www.jwz.org/dadadodo/},
+    note={Accessed June 12, 2016}
+}
